--- a/src/index.html
+++ b/src/index.html
@@ -7,12 +7,14 @@
   <title>Memo App</title>
   <link rel="stylesheet" href="https://uicdn.toast.com/editor/latest/toastui-editor.min.css">
   <link rel="stylesheet" href="https://uicdn.toast.com/editor/latest/theme/toastui-editor-dark.min.css">
+  <link rel="stylesheet" href="https://uicdn.toast.com/tui-color-picker/latest/tui-color-picker.min.css">
+  <link rel="stylesheet" href="https://uicdn.toast.com/editor-plugin-color-syntax/latest/toastui-editor-plugin-color-syntax.min.css">
   <link rel="stylesheet" href="./styles/tailwind.css">
   <link rel="stylesheet" href="./styles/base.css">
   <link rel="manifest" href="./manifest.json">
   <script>
     (function() {
-      if (window.innerWidth < 480) document.querySelector("meta[name=viewport]").setAttribute("content", "width=480, user-scalable=no");
+      if (window.innerWidth < 500) document.querySelector("meta[name=viewport]").setAttribute("content", "width=500, user-scalable=no");
     })();
   </script>
 </head>
