--- a/src/index.html
+++ b/src/index.html
@@ -85,34 +85,32 @@
     </symbol>
   </svg>
 
-  <header class="max-w-7xl">
-    <div class="mx-auto px-4 py-1">
-      <div class="flex flex-wrap justify-between items-center pt-3">
-        <div class="flex items-center">
-          <a href="https://ymmy833y.github.io/memo-app/" class="dark:text-gray-200 no-underline">
-            <span class="text-3xl font-serif">Memo App</span>
-          </a>
-        </div>
-        <div class="flex space-x-2">
-          <button id="clipboard-btn"
-            class="w-10 h-10 flex items-center justify-center border border-blue-500 text-blue-500 rounded hover:bg-blue-500 hover:text-white">
-            <svg width="20" height="20" fill="currentColor">
-              <use xlink:href="#clipboard_default"></use>
-            </svg>
-          </button>
-          <button id="save-btn"
-            class="w-10 h-10 flex items-center justify-center border border-blue-500 text-blue-500 rounded hover:bg-blue-500 hover:text-white">
-            <svg width="20" height="20" fill="currentColor">
-              <use xlink:href="#save"></use>
-            </svg>
-          </button>
-          <button id="menu-btn"
-            class="w-10 h-10 flex items-center justify-center border border-blue-500 text-blue-500 rounded hover:bg-blue-500 hover:text-white">
-            <svg width="20" height="20" fill="currentColor">
-              <use xlink:href="#menu"></use>
-            </svg>
-          </button>
-        </div>
+  <header class="max-w-7xl w-full mx-auto px-4 py-1">
+    <div class="flex flex-wrap justify-between items-center pt-3">
+      <div class="flex items-center">
+        <a href="https://ymmy833y.github.io/memo-app/" class="dark:text-gray-200 no-underline">
+          <span class="text-3xl font-serif">Memo App</span>
+        </a>
+      </div>
+      <div class="flex space-x-2">
+        <button id="clipboard-btn"
+          class="w-10 h-10 flex items-center justify-center border border-blue-500 text-blue-500 rounded hover:bg-blue-500 hover:text-white">
+          <svg width="20" height="20" fill="currentColor">
+            <use xlink:href="#clipboard_default"></use>
+          </svg>
+        </button>
+        <button id="save-btn"
+          class="w-10 h-10 flex items-center justify-center border border-blue-500 text-blue-500 rounded hover:bg-blue-500 hover:text-white">
+          <svg width="20" height="20" fill="currentColor">
+            <use xlink:href="#save"></use>
+          </svg>
+        </button>
+        <button id="menu-btn"
+          class="w-10 h-10 flex items-center justify-center border border-blue-500 text-blue-500 rounded hover:bg-blue-500 hover:text-white">
+          <svg width="20" height="20" fill="currentColor">
+            <use xlink:href="#menu"></use>
+          </svg>
+        </button>
       </div>
     </div>
   </header>
@@ -158,11 +156,9 @@
 
   <hr class="border-gray-700 my-2">
 
-  <main class="max-w-7xl flex-grow">
-    <div class="mx-auto px-4">
-      <div id="editor"></div>
-      <div id="count" class="pt-5 text-sm"></div>  
-    </div>
+  <main class="max-w-7xl flex-grow w-full mx-auto px-4">
+    <div id="editor"></div>
+    <div id="count" class="pt-5 text-sm"></div>  
   </main>
 
   <!-- Search modal -->
@@ -202,13 +198,14 @@
               Display
             </button>
           </div>
+          <span class="text-sm text-gray-500 dark:text-gray-300" id="preview-create-at"></span>
           <div id="preview"></div>
         </div>
       </div>
     </div>
   </div>
 
-  <footer class="max-w-7xl mt-auto pt-2">
+  <footer class="mt-auto w-full mx-auto pt-2">
     <div class="py-4 bg-gray-100 dark:bg-gray-800">
       <p class="text-center text-sm text-gray-700 dark:text-gray-300">&copy; 2025 Memo App. All rights reserved.</p>
       <div class="mt-2 flex justify-center space-x-4">
