--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,13 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Memo App</title>
-  <link rel="stylesheet" href="https://uicdn.toast.com/editor/latest/toastui-editor.min.css">
-  <link rel="stylesheet" href="https://uicdn.toast.com/editor/latest/theme/toastui-editor-dark.min.css">
   <link rel="stylesheet" href="https://uicdn.toast.com/tui-color-picker/latest/tui-color-picker.min.css">
-  <link rel="stylesheet" href="https://uicdn.toast.com/editor-plugin-color-syntax/latest/toastui-editor-plugin-color-syntax.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.23.0/themes/prism.min.css">
-  <link rel="stylesheet" href="https://uicdn.toast.com/editor-plugin-code-syntax-highlight/latest/toastui-editor-plugin-code-syntax-highlight.min.css">
-  <link rel="stylesheet" href="./styles/tailwind.css">
-  <link rel="stylesheet" href="./styles/base.css">
-  <link rel="manifest" href="./manifest.json">
+  <link rel="stylesheet" href="./style/tailwind.css">
+  <link rel="stylesheet" href="./style/base.css">
   <script>
     (function() {
       if (window.innerWidth < 510) document.querySelector("meta[name=viewport]").setAttribute("content", "width=510, user-scalable=no");
@@ -36,9 +30,13 @@
         d="M9.5 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h3Zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3ZM4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1A2.5 2.5 0 0 1 9.5 5h-3A2.5 2.5 0 0 1 4 2.5v-1Zm6.854 7.354a.5.5 0 0 0-.708-.708L7.5 10.793 6.354 9.646a.5.5 0 1 0-.708.708l1.5 1.5a.5.5 0 0 0 .708 0l3-3Z">
       </path>
     </symbol>
-    <symbol id="save" viewBox="0 0 16 16">
+    <symbol id="save_default" viewBox="0 0 16 16">
       <path
         d="M2 1a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H9.5a1 1 0 0 0-1 1v7.293l2.646-2.647a.5.5 0 0 1 .708.708l-3.5 3.5a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L7.5 9.293V2a2 2 0 0 1 2-2H14a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h2.5a.5.5 0 0 1 0 1H2z" />
+    </symbol>
+    <symbol id="save_check" viewBox="0 0 16 16">
+      <path
+        d="M8.5 1.5A1.5 1.5 0 0 1 10 0h4a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h6c-.314.418-.5.937-.5 1.5v7.793L4.854 6.646a.5.5 0 1 0-.708.708l3.5 3.5a.5.5 0 0 0 .708 0l3.5-3.5a.5.5 0 0 0-.708-.708L8.5 9.293z"/>
     </symbol>
     <symbol id="menu" viewBox="0 0 16 16">
       <path fill-rule="evenodd"
@@ -81,7 +79,8 @@
       </path>
     </symbol>
     <symbol id="github" viewBox="0 0 16 16">
-      <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8"/>
+      <path
+        d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8" />
     </symbol>
   </svg>
 
@@ -102,7 +101,7 @@
         <button id="save-btn"
           class="w-10 h-10 flex items-center justify-center border border-blue-500 text-blue-500 rounded hover:bg-blue-500 hover:text-white">
           <svg width="20" height="20" fill="currentColor">
-            <use xlink:href="#save"></use>
+            <use xlink:href="#save_default"></use>
           </svg>
         </button>
         <button id="menu-btn"
@@ -140,11 +139,11 @@
             </svg>
           </button>
           <select id="auto-save-interval" class="-ml-px p-2 border border-blue-500 rounded-r focus:outline-none focus:ring-2 focus:ring-blue-500 dark:bg-gray-800 dark:text-white dark:border-blue-500 dark:focus:ring-blue-500">
-            <option value="10">10s</option>
-            <option value="30">30s</option>
-            <option value="60">1m</option>
-            <option value="180">3m</option>
-            <option value="300">5m</option>
+            <option value="10000">10s</option>
+            <option value="30000">30s</option>
+            <option value="60000">1m</option>
+            <option value="180000">3m</option>
+            <option value="300000">5m</option>
           </select>
         </div>
         <button id="close-menu-btn" class="text-gray-700 dark:text-gray-200 pl-2">
@@ -153,10 +152,10 @@
           </svg>
         </button>
       </div>
-      <h2 class="text-xl font-bold mb-4">Saved Texts</h2>
+      <h2 class="text-xl font-bold mb-4">Saved Memos</h2>
       <!-- List container for saved texts, scrollable if needed -->
       <div class="flex-1 overflow-y-auto">
-        <ul id="side-menu-content" class="space-y-2"></ul>
+        <ul id="all-memos"></ul>
       </div>
     </div>
   </div>
@@ -165,7 +164,6 @@
 
   <main class="max-w-7xl flex-grow w-full mx-auto px-4">
     <div id="editor"></div>
-    <div id="count" class="pt-5 text-sm"></div>  
   </main>
 
   <!-- Search modal -->
@@ -182,14 +180,15 @@
       </div>
       <!-- Search input row: full-width -->
       <div class="flex items-center px-4">
-        <input id="search-input" type="text" placeholder="Enter search text"
+        <input id="search-keyword" type="text" placeholder="Enter search text"
           class="flex-1 p-2 border border-gray-300 dark:bg-gray-800 dark:border-gray-600 rounded" />
-        <button id="toggle-case-btn"
+        <label for="search-case-sensitive"
           class="ml-2 p-2 border border-gray-300 dark:border-gray-600 rounded hover:bg-blue-200 dark:hover:bg-blue-700">
+          <input id="search-case-sensitive" type="checkbox" class="hidden">
           <svg width="20" height="20" fill="currentColor">
             <use xlink:href="#isCaseSensitive"></use>
           </svg>
-        </button>
+        </label>
       </div>
       <!-- Search results section -->
       <div id="search-container" class="flex flex-1 p-4 overflow-hidden">
@@ -198,19 +197,12 @@
         </div>
         <div id="search-preview"
           class="hidden w-1/2 overflow-y-auto border border-gray-200 dark:border-gray-700 rounded p-2 ml-4">
-          <div class="flex items-center justify-between">
-            <h2 class="text-lg font-bold mb-2">Preview</h2>
-            <!-- Display button is always present -->
-            <button id="preview-display-btn" class="bg-blue-500 hover:bg-blue-600 text-white text-xs rounded px-2 py-1">
-              Display
-            </button>
-          </div>
-          <span class="text-sm text-gray-500 dark:text-gray-300" id="preview-create-at"></span>
-          <div id="preview"></div>
         </div>
       </div>
     </div>
   </div>
+
+  <div id="default-modal" class="hidden z-50"></div>
 
   <footer class="mt-auto w-full mx-auto pt-2">
     <div class="py-4 bg-gray-100 dark:bg-gray-800">
@@ -226,7 +218,7 @@
     </div>
   </footer>
 
-  <script type="module" src="./index.js"></script>
+  <script type="module" src="./index.ts"></script>
 </body>
 
 </html>
